         
        
         <ScrollView
    		  xmlns:android="http://schemas.android.com/apk/res/android"
  		xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/scrollView1"
            android:fillViewport="true"

            android:layout_width="match_parent"
            android:layout_height="match_parent" >
                     
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bg"
        android:orientation="vertical"
        android:padding="20dp" >
        
         <EditText
            android:id="@+id/editFname"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="@dimen/text_size"
            android:layout_marginTop="0dp"
            android:background="#ffffff"
            android:hint="@string/hint_fname">
            <requestFocus />
        </EditText>
        
          <EditText
            android:id="@+id/editLname"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="@dimen/text_size"
            android:layout_marginTop="30dp"
            android:background="#ffffff"
            android:hint="@string/hint_lname">
          </EditText>
          
           <EditText
            android:id="@+id/editDob"
            android:inputType="date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="@dimen/text_size"
            android:layout_marginTop="30dp"
            android:background="#ffffff"
            android:hint="@string/hint_dob">
          </EditText>
          
            <EditText
            android:id="@+id/editEmail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="@dimen/text_size"
            android:layout_marginTop="30dp"
            android:background="#ffffff"
            android:hint="@string/hint_email">
          </EditText>
          
             <EditText
            android:id="@+id/editPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="@dimen/text_size"
            android:layout_marginTop="30dp"
            android:background="#ffffff"
            android:hint="@string/hint_password">
          </EditText>
          
              <EditText
            android:id="@+id/editConfirmPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="@dimen/text_size"
            android:layout_marginTop="30dp"
            android:background="#ffffff"
            android:hint="@string/hint_cPassword">
          </EditText>
          
              <Button
            android:id="@+id/btnRegister"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/buttons"
            android:textSize="@dimen/text_size"
            android:textColor="#ffff"
            android:text="@string/btn_register" > 
            
                   
                  
            </Button>

             
        
        </LinearLayout>
       </ScrollView>
      
