 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="20dp"
         >
        
        
            <EditText
         android:id="@+id/editOldPassword"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="#ffffff"
         android:inputType="textPassword"
         android:padding="10dp"
         android:hint="@string/hint_password"
         android:textSize="@dimen/text_size" />
		
        
            <EditText
         android:id="@+id/editNewPassword"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="#ffffff"
         android:inputType="textPassword"
         android:padding="10dp"
         android:hint="@string/hint_nPassword"
         android:textSize="@dimen/text_size" />
            
            <EditText
         android:id="@+id/editCNewPassword"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="#ffffff"
         android:inputType="textPassword"
         android:padding="10dp"
         android:hint="@string/hint_cPassword"
         android:textSize="@dimen/text_size" />
            
		
        
        
      
		<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:orientation="horizontal" 
         android:padding="0dp">

		    
		    
         <Button
             android:id="@+id/btnChPwd"
             style="@style/AppTheme"
             android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="0.27"
             android:background="@drawable/buttons"
             android:text="@string/btnChange"
             android:textColor="#ffff"
             android:textSize="@dimen/text_size" />
         
         
         		    
         <Button
             android:id="@+id/btnchCancel"
             style="@style/AppTheme"
             android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="0.27"
             android:background="@drawable/buttons"
             android:text="@string/btnCancel"
             android:textColor="#ffff"
             android:textSize="@dimen/text_size" 
             android:layout_marginLeft="10dp"/>
         
        
     </LinearLayout>
    </LinearLayout>
 