  

<ScrollView
    		xmlns:android="http://schemas.android.com/apk/res/android"
  			xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/scrollView1"
            android:fillViewport="true"
            android:layout_width="fill_parent"
            android:layout_height="match_parent" >
            
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:padding="20dp" >

        

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cp_logo"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp"
            android:scaleType="fitXY" />
    
        <EditText
            android:id="@+id/editEmail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="@dimen/text_size"
            android:layout_marginTop="30dp"
            android:background="#ffffff"
            android:hint="@string/hint_userId">
            <requestFocus />
        </EditText>
        
        <EditText
            android:id="@+id/editPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="@dimen/text_size"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:hint="@string/hint_password">
        </EditText>

        <Button
            android:id="@+id/btnLogin"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/buttons"
            android:textSize="@dimen/text_size"
            android:textColor="#ffff"
            android:text="@string/btn_login" />

        <TextView
            android:id="@+id/textSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:linksClickable="true"
            android:text="@string/lbl_singUp"
            android:textColor="#ffff"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

      
    </LinearLayout>

    </ScrollView>
    
