<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context=".AboutActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:layout_gravity="center_horizontal"
        android:text="An encyclopedia about your city" />

     <View
         	android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="2dip"
            android:background="#FF0000" />

     <TextView
         android:id="@+id/textView2"
         android:inputType="textMultiLine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#fff"
         android:textSize="20sp"
         android:layout_marginTop="5dp"
         android:text="@string/line1" />
     
     <TextView
         android:id="@+id/textView2"
         android:inputType="textMultiLine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#fff"
         android:textSize="20sp"
         android:layout_marginTop="10dp"
         android:text="@string/line2" />
     
      <TextView
         android:id="@+id/textView2"
         android:inputType="textMultiLine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#fff"
         android:textSize="20sp"
         android:layout_marginTop="10dp"
         android:text="@string/line3" />
      <View
         	android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="2dip"
            android:background="#FF0000" />
      <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Developers"
        android:textColor="#fff"
        android:textSize="25sp" />
      <TextView
         android:id="@+id/textView2"
         android:inputType="text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#fff"
         android:textSize="15sp"
         android:layout_marginTop="0dp"
         android:text="Karan Bhutwala" />
      <TextView
         android:id="@+id/textView2"
         android:inputType="text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#fff"
         android:textSize="15sp"
         android:layout_marginTop="0dp"
         android:text="Vimal Jain" />
      <TextView
         android:id="@+id/textView2"
         android:inputType="text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#fff"
         android:textSize="15sp"
         android:layout_marginTop="0dp"
         android:text="Shreya Gupta" />
    
    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="Back"
        android:textSize="@dimen/text_size"
        android:background="@drawable/buttons"
        android:layout_gravity="center_horizontal" />

</LinearLayout>